--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -7,5 +7,7 @@
     <dimen name="digital_x_offset_round">25dp</dimen>
     <dimen name="digital_y_offset">65dp</dimen>
     <dimen name="digital_x_padding">12dp</dimen>
-    <dimen name="digital_y_padding">25dp</dimen>
+    <dimen name="digital_y_padding">20dp</dimen>
+    <dimen name="digital_ampm_offset">12dp</dimen>
+    <dimen name="digital_y_divide_padding">10dp</dimen>
 </resources>
